infra/terraform/manifests/backstage/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: backstage
  labels:
    name: backstage
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
